Add QR code view to fix file sending for Samsung devices

--- a/ShareExtension/Base.lproj/ShareViewController.xib
+++ b/ShareExtension/Base.lproj/ShareViewController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="23504" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="23504"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ShareViewController" customModule="ShareExtension" customModuleProvider="target">
             <connections>
                 <outlet property="contentWrap" destination="ACO-U2-AZj" id="PAE-Pw-Vyx"/>
+                <outlet property="dontSeeDeviceButton" destination="CF4-AV-wG4" id="KWW-f4-IO0"/>
                 <outlet property="filesIcon" destination="afM-Om-nLQ" id="I58-a3-SBZ"/>
                 <outlet property="filesLabel" destination="OEz-QK-nem" id="his-3f-6kx"/>
                 <outlet property="largeProgress" destination="fCj-wF-rEj" id="jEg-Uc-Ur7"/>
@@ -91,46 +92,55 @@ Gw
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <customView translatesAutoresizingMaskIntoConstraints="NO" id="ACO-U2-AZj">
-                    <rect key="frame" x="0.0" y="40" width="404" height="146"/>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="CF4-AV-wG4">
+                    <rect key="frame" x="3" y="3" width="189" height="32"/>
+                    <buttonCell key="cell" type="push" title="Don't see your device?" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="j2l-tf-7in">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                        <string key="keyEquivalent" base64-UTF8="YES">
+Gw
+</string>
+                    </buttonCell>
+                    <constraints>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="175" id="WQ4-sg-Puk"/>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="WyJ-wc-nKO"/>
+                    </constraints>
+                    <connections>
+                        <action selector="dontSeeDeviceButton:" target="-2" id="EZu-rX-Ewr"/>
+                    </connections>
+                </button>
+                <customView id="ACO-U2-AZj">
+                    <rect key="frame" x="0.0" y="39" width="404" height="146"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </customView>
             </subviews>
             <constraints>
                 <constraint firstItem="OEz-QK-nem" firstAttribute="top" secondItem="1xF-vr-5sH" secondAttribute="bottom" constant="10" id="852-oh-vM0"/>
                 <constraint firstItem="OEz-QK-nem" firstAttribute="leading" secondItem="afM-Om-nLQ" secondAttribute="trailing" constant="5" id="CIj-Dk-Md0"/>
-                <constraint firstAttribute="trailing" secondItem="ACO-U2-AZj" secondAttribute="trailing" id="HIg-sX-IK0"/>
-                <constraint firstItem="ACO-U2-AZj" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="IGL-2g-wpe"/>
+                <constraint firstItem="CF4-AV-wG4" firstAttribute="leading" secondItem="afM-Om-nLQ" secondAttribute="leading" id="KfB-g2-nez"/>
                 <constraint firstItem="afM-Om-nLQ" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="10" id="LK2-cg-qcY"/>
-                <constraint firstItem="NVE-vN-dkz" firstAttribute="top" secondItem="ACO-U2-AZj" secondAttribute="bottom" constant="10" id="RSD-PX-W0H"/>
                 <constraint firstAttribute="bottom" secondItem="NVE-vN-dkz" secondAttribute="bottom" constant="10" id="USG-Gg-of3"/>
                 <constraint firstAttribute="trailing" secondItem="NVE-vN-dkz" secondAttribute="trailing" constant="10" id="Z6U-4n-4tO"/>
+                <constraint firstItem="CF4-AV-wG4" firstAttribute="baseline" secondItem="NVE-vN-dkz" secondAttribute="baseline" id="duh-UD-VUw"/>
                 <constraint firstItem="afM-Om-nLQ" firstAttribute="top" secondItem="1" secondAttribute="top" constant="36" id="fUG-kT-wb0"/>
+                <constraint firstItem="NVE-vN-dkz" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="CF4-AV-wG4" secondAttribute="trailing" constant="12" symbolic="YES" id="kWX-0G-L7t"/>
                 <constraint firstItem="1xF-vr-5sH" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="sCA-yf-S9L"/>
                 <constraint firstItem="1xF-vr-5sH" firstAttribute="top" secondItem="1" secondAttribute="top" constant="10" id="tFn-vk-9Cq"/>
                 <constraint firstAttribute="trailing" secondItem="OEz-QK-nem" secondAttribute="trailing" constant="10" id="vyd-BI-oDH"/>
-                <constraint firstItem="ACO-U2-AZj" firstAttribute="top" secondItem="OEz-QK-nem" secondAttribute="bottom" constant="10" id="x5r-wc-s4x"/>
             </constraints>
             <point key="canvasLocation" x="140" y="-36"/>
         </customView>
         <stackView wantsLayer="YES" distribution="equalSpacing" orientation="vertical" alignment="centerX" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" id="fLZ-IA-bPS">
-            <rect key="frame" x="0.0" y="0.0" width="521" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="521" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <progressIndicator wantsLayer="YES" maxValue="100" indeterminate="YES" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="fCj-wF-rEj">
-                    <rect key="frame" x="245" y="68" width="32" height="32"/>
+                    <rect key="frame" x="245" y="61" width="32" height="39"/>
                 </progressIndicator>
                 <textField wantsLayer="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="27P-yf-gUd">
-                    <rect key="frame" x="189" y="42" width="144" height="16"/>
+                    <rect key="frame" x="189" y="35" width="144" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Looking for devices..." id="NaJ-Wx-Pim">
                         <font key="font" textStyle="headline" name=".SFNS-Bold"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
-                <textField wantsLayer="YES" focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="V5W-Rm-YVM">
-                    <rect key="frame" x="-2" y="0.0" width="525" height="32"/>
-                    <textFieldCell key="cell" alignment="center" title="If you don't see your device, open &quot;Google Files&quot; app and tap &quot;Receive&quot; on the Nearby Share tab." id="vla-gF-eJo">
-                        <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -138,15 +148,14 @@ Gw
             </subviews>
             <constraints>
                 <constraint firstItem="27P-yf-gUd" firstAttribute="top" secondItem="fCj-wF-rEj" secondAttribute="bottom" constant="10" id="87W-ec-fMh"/>
-                <constraint firstItem="V5W-Rm-YVM" firstAttribute="top" secondItem="27P-yf-gUd" secondAttribute="bottom" constant="10" id="OSI-wI-LcY"/>
+                <constraint firstAttribute="bottom" secondItem="27P-yf-gUd" secondAttribute="bottom" constant="35" id="L3k-0X-y8j"/>
+                <constraint firstItem="fCj-wF-rEj" firstAttribute="top" secondItem="fLZ-IA-bPS" secondAttribute="top" constant="30" id="Uon-lo-9kV"/>
             </constraints>
             <visibilityPriorities>
                 <integer value="1000"/>
                 <integer value="1000"/>
-                <integer value="1000"/>
             </visibilityPriorities>
             <customSpacing>
-                <real value="3.4028234663852886e+38"/>
                 <real value="3.4028234663852886e+38"/>
                 <real value="3.4028234663852886e+38"/>
             </customSpacing>
@@ -229,22 +238,23 @@ Gw
             </customSpacing>
             <point key="canvasLocation" x="4" y="-288"/>
         </stackView>
-        <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="A4d-Qt-PsT">
+        <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="A4d-Qt-PsT">
             <rect key="frame" x="0.0" y="0.0" width="271" height="172"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-            <clipView key="contentView" id="cCr-8P-Lya">
-                <rect key="frame" x="1" y="1" width="269" height="170"/>
-                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <clipView key="contentView" drawsBackground="NO" id="cCr-8P-Lya">
+                <rect key="frame" x="0.0" y="0.0" width="271" height="172"/>
+                <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView id="gZI-Zb-Blx">
-                        <rect key="frame" x="0.0" y="0.0" width="269" height="170"/>
+                        <rect key="frame" x="0.0" y="0.0" width="271" height="172"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="ATS-Jd-odC">
                             <size key="itemSize" width="50" height="50"/>
                         </collectionViewFlowLayout>
-                        <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <color key="primaryBackgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </collectionView>
                 </subviews>
+                <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             </clipView>
             <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="3j2-z3-G1e">
                 <rect key="frame" x="-100" y="-100" width="402" height="16"/>
